--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "en-stemmer": "^1.0.3",
     "express": "^4.16.4",
     "express-fileupload": "^1.1.1-alpha.3",
+    "is-letter": "^1.1.1",
     "mongoose": "^5.4.8",
     "multer": "^1.4.1",
     "rimraf": "^2.6.3",
